# tags2sdists

./: .gitignore  .nens.toml  .pre-commit-config.yaml  .travis.yml  CHANGES.rst  CREDITS.rst  MANIFEST.in  README.rst  buildout.cfg  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: nens-meta.yml
doc/source/: code.rst  conf.py
src/tags2sdists/: checkoutdir.py  checkoutdir.rst  packagedir.py  script.py  utils.py
src/tags2sdists/testpackagedir/: wrong_file_for_testing.txt
tags2sdists/: checkoutdir.py  checkoutdir.rst  packagedir.py  packagedir.rst  script.py  sourcedir.py  sourcedir.rst  utils.py
